--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -15,6 +15,7 @@
   <script type="text/javascript" src="../javascripts/regex2nfa.js"></script>
 
   <!-- include spec files here... -->
+  <script type="text/javascript" src="spec/nfaspec.js"></script>
   <script type="text/javascript" src="spec/regex2nfaspec.js"></script>
 </head>
 
